# ros2_ASPR

./: README.md
practica_msgs/: CMakeLists.txt  package.xml
practica_msgs/srv/: GetPoseStamped.srv  GetString.srv
taller_ros2/: CMakeLists.txt  package.xml
taller_ros2/launch/: procesos_launch.py
taller_ros2/src/: proceso_1.cpp  proceso_2.cpp  proceso_3.cpp
